[package]
name = "iroh-live-android"
version = "0.1.0"
edition = "2024"
description = "JNI bridge for the iroh-live Android demo app"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
iroh-live = { path = "../../iroh-live", default-features = false }
moq-media = { path = "../../moq-media", default-features = false, features = ["h264", "opus", "android"] }
rusty-codecs = { path = "../../rusty-codecs", default-features = false, features = ["h264", "opus", "hang", "android"] }
jni = "0.21"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
bytes = "1.11.0"

[lints]
workspace = true
