[package]
name = "pi-zero-minimal"
version = "0.1.0"
edition = "2024"
description = "Minimal Pi camera + mic publisher: capture, encode, print ticket, wait"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
iroh = { workspace = true }
iroh-live = { workspace = true, features = ["h264", "opus", "capture-camera"] }
moq-media = { workspace = true, features = ["h264", "opus", "capture-camera"] }
n0-error = { version = "0.1.2", features = ["anyhow"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[lints]
workspace = true
