[package]
name = "pi-zero-demo"
version = "0.1.0"
edition = "2024"
description = "Raspberry Pi Zero 2 demo: publish camera stream and show ticket QR on e-paper"
publish = false

[dependencies]
anyhow = "1.0.100"
iroh = { workspace = true }
bytes = "1.11.0"
iroh-live = { path = "../../iroh-live", default-features = false, features = [
    "h264",
    "opus",
] }
moq-media = { path = "../../moq-media", default-features = false, features = [
    "h264",
    "opus",
    "v4l2",
] }
rusty-codecs = { path = "../../rusty-codecs", default-features = false }
clap = { version = "4.5", features = ["derive"] }
n0-error = { version = "0.1.2", features = ["anyhow"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# QR code generation
qrcode = "0.14"

# E-paper display
embedded-graphics = "0.8"
embedded-hal = "1.0"
linux-embedded-hal = "0.4"
gpio-cdev = "0.6"

[lints]
workspace = true
