[package]
name = "pi-zero-demo"
version = "0.1.0"
edition = "2024"
description = "Raspberry Pi Zero 2 demo: publish camera stream, show ticket QR on e-paper, watch remote streams"
publish = false

[features]
default = ["windowed"]
windowed = ["dep:winit", "dep:glutin", "dep:glutin-winit", "dep:raw-window-handle"]

# Cross-platform dependencies (used in all targets for the binary entry point).
[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
n0-error = { version = "0.1.2", features = ["anyhow"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Linux-only dependencies — the demo only runs on Linux (Pi Zero / ARM64).
[target.'cfg(target_os = "linux")'.dependencies]
iroh = { workspace = true }
bytes = "1.11.0"
iroh-live = { workspace = true, features = ["h264", "opus"] }
moq-media = { workspace = true, features = ["h264", "opus", "v4l2", "test-util"] }
tokio-util = "0.7"
rusty-codecs = { workspace = true, features = ["raspberry-pi", "gles", "gles-dmabuf"] }

# QR code generation
qrcode = "0.14"

# E-paper display
embedded-graphics = "0.8"
embedded-hal = "1.0"
linux-embedded-hal = "0.4"
gpio-cdev = "0.6"

# EGL/GLES2 rendering (watch command)
glow = "0.16"
khronos-egl = { version = "6", features = ["dynamic"] }
libc = "0.2"
drm = "0.14"
drm-fourcc = "2.2"
gbm = { version = "0.18", features = ["drm-support"] }

# Windowed mode (optional, default on)
winit = { version = "0.30", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[lints]
workspace = true
